# robo-grasper

./: .gitmodules  README.md  _env  _gitmodules  moveit2.py  notes.org  setup.bash
angle_classifier/: angle_classifier.ipynb  angle_clf.ipynb  classifier_comparison.ipynb  clf_file.pickle  clf_simple.ipynb  clf_simple_python2.ipynb  pyproject.toml  transient.ipynb
angle_classifier/.ipynb_checkpoints/: angle_classifier-checkpoint.ipynb  angle_clf-checkpoint.ipynb  classifier_comparison-checkpoint.ipynb  clf_simple-checkpoint.ipynb  clf_simple_python2-checkpoint.ipynb  transient-checkpoint.ipynb
angle_classifier/angle_classifier.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
angle_classifier/data/archive/data_set/: data_set.json
angle_classifier/data/archive/data_set/.ipynb_checkpoints/: test_set-checkpoint.json
angle_classifier/data/archive/data_set_alt/: data_set_alt.json  training_set_alt.json
angle_classifier/data/archive/data_set_alt/.ipynb_checkpoints/: data_set-checkpoint.json
angle_classifier/data/archive/data_set_alt/testing/: config.json
angle_classifier/data/archive/data_set_alt/training/: config.json
angle_classifier/data/archive/data_set_ext/: data_set_ext.json
angle_classifier/data/archive/data_set_ext/training/: config.json
angle_classifier/data/data_set/testing/: config_easy.json  config_hard.json
angle_classifier/data/data_set/training/: config.json
angle_classifier/pip-wheel-metadata/angle_classifier-0.1.0.dist-info/: METADATA
angle_classifier/tests/: test_angle_classifier.py
pas/: Dockerfile  README  _gitignore
(+432 files in other folders)
