[tool.poetry]
name = "angle_classifier"
version = "0.1.0"
description = ""
authors = ["Jordis Hollander <jordis1995@live.nl>"]

[tool.poetry.dependencies]
python = "^3.7"
scikit-learn = "^0.20.3"
pandas = "^0.24.2"
matplotlib = "^3.0"
pillow = "^6.0"
scikit-image = "^0.15.0"

[tool.poetry.dev-dependencies]
pytest = "^3.0"
jupyterlab = "^0.35.5"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
